# tree-sitter-toolang

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-toolang.wasm  tree-sitter.json
.github/workflows/: ci.yml  release.yml  wheels.yml
bindings/python/tree_sitter_toolang/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  injections.scm  outline.scm  tags.scm
scripts/: check_cli.mjs  check_cli.py
src/: grammar.json  node-types.json  parser.c
test/corpus/: source_file.txt
tests/: test_binding.py
tests/fixtures/: cli.too  smoke.too
