[package]
name = "tree-sitter-toolang"
version = "0.0.5"
edition = "2021"
description = "Toolang grammar for tree-sitter"
license = "MIT"
authors = ["Brice Yan"]
readme = "README.md"
homepage = "https://github.com/openhat-ai/tree-sitter-toolang"
repository = "https://github.com/openhat-ai/tree-sitter-toolang"
keywords = ["parser", "toolang", "tree-sitter"]
categories = ["parsing", "text-processing"]
include = [
    "bindings/rust/*",
    "queries/*.scm",
    "src/*",
    "src/tree_sitter/*.h",
    "grammar.js",
    "tree-sitter.json",
    "README.md",
    "LICENSE",
]
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"
