[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-toolang"
version = "0.0.5"
description = "Toolang grammar for tree-sitter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["incremental", "parsing", "toolang", "tree-sitter"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "OpenHat" },
]

[project.urls]
Homepage = "https://github.com/openhat-ai/tree-sitter-toolang"
Repository = "https://github.com/openhat-ai/tree-sitter-toolang"
Issues = "https://github.com/openhat-ai/tree-sitter-toolang/issues"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]
tests = ["pytest>=8", "tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
test-requires = ["pytest>=8", "tree-sitter~=0.25"]
test-command = "pytest {project}/tests"
